--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,42 @@
     <string name="title_activity_maps">MapsActivity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="date_time"> %1$s WIB</string>
+
+    <array name="province">
+        <item>Aceh</item>
+        <item>Bali</item>
+        <item>Kep Bangka Belitung</item>
+        <item>Banten</item>
+        <item>Bengkulu</item>
+        <item>Jawa Tengah</item>
+        <item>Kalimantan Tengah</item>
+        <item>Sulawesi Tengah</item>
+        <item>Jawa Timur</item>
+        <item>Kalimantan Timur</item>
+        <item>Nusa Tenggara Timur</item>
+        <item>Gorontalo</item>
+        <item>DKI Jakarta</item>
+        <item>Jambi</item>
+        <item>Lampung</item>
+        <item>Maluku</item>
+        <item>Kalimantan Utara</item>
+        <item>Maluku Utara</item>
+        <item>Sulawesi Utara</item>
+        <item>Sumatera Utara</item>
+        <item>Papua</item>
+        <item>Riau</item>
+        <item>Kepulauan Riau</item>
+        <item>Sulawesi Tenggara</item>
+        <item>Kalimantan Selatan</item>
+        <item>Sulawesi Tenggara</item>
+        <item>Sumatera Selatan</item>
+        <item>DI Yogyakarta</item>
+        <item>Jawa Barat</item>
+        <item>Kalimantan Barat</item>
+        <item>Nusa Tenggara Barat</item>
+        <item>Papua Barat</item>
+        <item>Sulawesi Barat</item>
+        <item>Sumatera Barat</item>
+    </array>
 </resources>
